basic OCR functionality added

--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-16
 android.library.reference.1=..\\OpenCV-2.4.10-android-sdk\\sdk\\java
+android.library.reference.2=../tess-two/tess-two
