--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,11 +19,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/db_icon"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.visionapp.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/appName" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,11 +32,11 @@
         </activity>
         <activity
             android:name="com.example.visionapp.ResultsActivity"
-            android:label="@string/title_activity_results" >
+            android:label="@string/appName" >
         </activity>
         <activity
             android:name="com.example.visionapp.ImageActivity"
-            android:label="@string/title_activity_image" >
+            android:label="@string/appName" >
         </activity>
     </application>
 
