--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.visionapp.MainActivity"
-            android:label="@string/appName" >
+            android:label="@string/appName"
+            android:screenOrientation="portrait"
+   			android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,11 +34,15 @@
         </activity>
         <activity
             android:name="com.example.visionapp.ResultsActivity"
-            android:label="@string/appName" >
+            android:label="@string/appName"
+            android:screenOrientation="portrait"
+   			android:configChanges="orientation|keyboardHidden" >
         </activity>
         <activity
             android:name="com.example.visionapp.ImageActivity"
-            android:label="@string/appName" >
+            android:label="@string/appName"
+            android:screenOrientation="portrait"
+   			android:configChanges="orientation|keyboardHidden" >
         </activity>
     </application>
 
