--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,10 +22,10 @@
         android:label="@string/appName"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.visionapp.MainActivity"
+            android:name=".MainActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/appName"
-            android:screenOrientation="portrait"
-   			android:configChanges="orientation|keyboardHidden" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,16 +33,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.visionapp.ResultsActivity"
+            android:name=".ResultsActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/appName"
-            android:screenOrientation="portrait"
-   			android:configChanges="orientation|keyboardHidden" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.example.visionapp.ImageActivity"
+            android:name=".ImageActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/appName"
-            android:screenOrientation="portrait"
-   			android:configChanges="orientation|keyboardHidden" >
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".Table"
+            android:label="@string/title_activity_table" >
         </activity>
     </application>
 
